--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -15,6 +16,7 @@
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
     "tailwindcss": "^3.3.6",
     "web-vitals": "^2.1.4"
   },
