--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
+    "js-cookie": "^3.0.5",
     "postcss-cli": "^11.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
